--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta name="description" content="Test task"/>
+    <meta charset="utf-8">
+    <meta name="description" content="Test task">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leasing calculator</title>
   </head>
